# CyRedis

./: .gitignore  .gitmodules  AUTOMATED_TEST_RESULTS.md  CHANGELOG.md  CLAUDE.md  LUA_TEST_SETUP.md  MANIFEST.in  Makefile  README.md  README_CLUSTER_ENHANCED.md  README_CYREDIS.md  README_ENHANCED.md  TESTING.md  TEST_HARNESS_SUMMARY.md  WEB_APP_FEATURES_README.md  WEB_CACHE_README.md  __init__.py  advanced_redis.py  build_cyredis.sh  build_optimized.sh  build_optimized_advanced.sh  cy_redis.pyx  distributed.py  distributed_wrapper.py  docker-compose.yml  example_atomic_script_deployment.py  example_lua_scripts.py  example_shared_dict.py  messaging.py  messaging_wrapper.py  migration_example.py  optimized_redis.py  pg_cache.py  pyproject.toml  quick_test_suite.py  redis_wrapper.py  requirements.txt  rpc.py  run_automated_tests.sh  setup.py  (+7 more)
.github/workflows/: publish.yml  tests.yml
cy_redis/: __init__.py  advanced.pxd  advanced.pyx  async_core.pxd  async_core.pyx  connection_pool.pxd  connection_pool.py  connection_pool.pyx  cy_redis_client.pxd  cy_redis_client.py  cy_redis_client.pyx  distributed.py  distributed.pyx  functions.pxd  functions.pyx  high_performance_redis.py  libhiredis.1.3.0.dylib  libhiredis.dylib  messaging.pxd  messaging.pyx  messaging_core.pyx  protocol.pxd  protocol.pyx  redis_core.pyx  reliable_queue.py  rpc.c  rpc.pxd  rpc.pyx  script_manager.pxd  script_manager.pyx  shared_dict.pxd  shared_dict.pyx  web_app_support.py  web_app_support.pyx
cy_redis/auth/: __init__.py  password_reset_manager.pxd  password_reset_manager.pyx  session_manager.pxd  session_manager.pyx  token_manager.pxd  token_manager.pyx  two_factor_auth.pxd  two_factor_auth.pyx
cy_redis/communication/: __init__.py  messaging.c  messaging.pyx  messaging_core.pxd  messaging_core.pyx  rpc.c  rpc.pyx
cy_redis/core/: __init__.py  async_core.c  async_core.py  async_core.pyx  connection_pool.pxd  connection_pool.pyx  cy_redis_client.pxd  cy_redis_client.pyx  protocol.c  protocol.pxd  protocol.pyx  redis_core.pxd  redis_core.pyx  tls_support.pyx
cy_redis/cpp/: bloom_filter.hpp  count_min_sketch.hpp  cuckoo_filter.hpp
cy_redis/data/: __init__.py  concurrent_shared_dict.pxd  concurrent_shared_dict.pyx  shared_dict.c  shared_dict.pxd  shared_dict.pyx  shared_state_manager.pxd  shared_state_manager.pyx
cy_redis/features/: __init__.py  advanced.c  advanced.pyx  ai.cpp  ai.pyx  distributed.c  distributed.pxd  distributed.pyx  functions.pxd  functions.pyx  graph.pyx  json_ops.pyx  probabilistic.cpp  probabilistic.pyx  script_manager.pyx  search.pyx
cy_redis/integrations/: __init__.py  clickhouse.py
cy_redis/utils/: __init__.py  redis_iterators.pxd  redis_iterators.pyx
cy_redis/web/: __init__.py  channels.pxd  channels.pyx  fastapi_integration.py  web_app_support.pyx  web_cache.pxd  web_cache.pyx
cy_redis/workers/: __init__.py  lifecycle_manager.pxd  lifecycle_manager.pyx  multi_session_tracker.pxd  multi_session_tracker.pyx  worker_coordinator.pxd  worker_coordinator.pyx  worker_queue.pxd  worker_queue.pyx
cyredis_game/: README.md  __init__.py  build_game_engine.sh  chain.c  chain.pxd  chain.pyx  example_game_engine.py  game_engine.c  game_engine.pxd  game_engine.pyx  goap.c  goap.pxd  goap.pyx  module_manager.c  module_manager.pxd  module_manager.pyx  pathfinding.c  pathfinding.pxd  pathfinding.pyx  physics.c  physics.pxd  physics.pyx  setup.py
cyredis_game/lua/: cy_ai.lua  cy_chain.lua  cy_game_flecs.lua
cyredis_game/module/: Makefile  cy_game.c  cy_game.h  goap.c  goap.h  pathfinding.c  pathfinding.h  physics.c  physics.h  test-redis.conf
docs/: TIGERSTYLE.md  advanced.md  core-api.md  getting-started.md  scripting.md  streams.md  testing.md  web-channels.md  web.md
examples/: README.md  __init__.py  cluster_aware_demo.py  enhanced_cyredis_demo.py  example_atomic_script_deployment.py  example_clickhouse_redis.py  example_fastapi_channels.py  example_lua_scripts.py  example_production_redis.py  example_protocol_support.py  example_redis_functions.py  example_shared_dict.py  example_usage.py  production_redis.py  streaming_example.py  web_app_example.py  web_cache_example.py  web_cache_simple_example.py
hiredis/: __init__.py
lua_scripts/: README.md  distributed_lock.lua  job_queue.lua  rate_limiter.lua  smart_cache.lua
plugins/: README.md  __init__.py
plugins/pgcache/: Makefile  README.md  README_TESTS.md  __init__.py  build_module.sh  run_tests.py  setup_test_environment.py  test_integration.py  test_pgcache.py  validate_sqli.sh
plugins/pgcache/src/: Makefile  pgcache.c
scripts/: run_tests.sh  test_quick.sh
tests/: README.md  TESTING_SUMMARY.md  __init__.py  conftest.py  docker-compose.test.yml  pytest.ini  test_configuration.py  test_worker_coordination.py
tests/apps/: README.md  distributed_cache_app.py  job_queue_app.py  leaderboard_app.py  lua_script_manager_app.py  message_queue_app.py  metrics_collector_app.py  pubsub_chat_app.py  rate_limiter_app.py  session_manager_app.py  simple_kv_app.py  task_scheduler_app.py
tests/docker/: README.md  docker-compose.yml
tests/integration/: __init__.py  conftest.py  test_async_operations.py  test_basic_operations.py  test_cluster_operations.py  test_concurrent_access.py  test_connection_resilience.py  test_cy_game_module.py  test_distributed_locks.py  test_lua_scripts.py  test_messaging_flows.py  test_performance.py  test_pgcache_module.py  test_rpc.py  test_sentinel_failover.py  test_streaming.py  test_tls.py  test_worker_coordination.py
tests/unit/: README.md  __init__.py  conftest.py  pytest.ini  test_async_core.py  test_chain.py  test_channels.py  test_client_pool_exec.py  test_connection_auth_db.py  test_connection_hardening.py  test_connection_pool.py  test_distributed.py  test_flecs_module.py  test_functions.py  test_game_engine.py  test_goap.py  test_messaging.py  test_nogil_concurrency.py  test_pathfinding.py  test_physics.py  test_protocol.py  test_redis_core.py  test_script_manager.py  test_shared_dict.py  test_two_factor_auth.py  test_web_cache_pickle.py  test_worker_coordination_unit.py
(+5 files in other folders)
