[build-system]
requires = ["setuptools", "Cython>=0.29.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cy-redis"
version = "0.1.0"
description = "High-performance threaded Redis client using Cython and hiredis"
readme = "README_CYREDIS.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "AI Assistant", email = "assistant@example.com"},
]
maintainers = [
    {name = "AI Assistant", email = "assistant@example.com"},
]
keywords = [
    "redis",
    "cython",
    "hiredis",
    "high-performance",
    "threading",
    "async",
    "database",
    "client",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Cython",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking",
]
dependencies = [
    "Cython>=0.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-asyncio>=0.15",
    "black>=21.0",
    "flake8>=3.9",
    "mypy>=0.900",
    "isort>=5.8.0",
]
docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0",
    "myst-parser>=0.15",
]
test = [
    "pytest>=6.0",
    "pytest-asyncio>=0.15",
    "pytest-cov>=2.10",
]

[project.urls]
Homepage = "https://github.com/your-repo/cy-redis"
Documentation = "https://cy-redis.readthedocs.io/"
Repository = "https://github.com/your-repo/cy-redis"
Issues = "https://github.com/your-repo/cy-redis/issues"
Changelog = "https://github.com/your-repo/cy-redis/blob/main/CHANGELOG.md"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["cy_redis*"]
exclude = ["tests*", "docs*", "scripts*", "plugins*", "examples*", "lua_scripts*", "hiredis*"]

# Core Infrastructure
[[tool.setuptools.ext-modules]]
name = "cy_redis.core.cy_redis_client"
sources = ["cy_redis/core/cy_redis_client.pyx"]
include-dirs = ["/Users/bengamble/CyRedis/hiredis"]
extra-objects = ["/Users/bengamble/CyRedis/hiredis/libhiredis.dylib"]

[[tool.setuptools.ext-modules]]
name = "cy_redis.core.protocol"
sources = ["cy_redis/core/protocol.pyx"]
include-dirs = ["/Users/bengamble/CyRedis/hiredis"]
extra-objects = ["/Users/bengamble/CyRedis/hiredis/libhiredis.dylib"]

# Temporarily disabled - has import issues
# [[tool.setuptools.ext-modules]]
# name = "cy_redis.core.connection_pool"
# sources = ["cy_redis/core/connection_pool.pyx"]
# include-dirs = ["/Users/bengamble/CyRedis/hiredis"]
# extra-objects = ["/Users/bengamble/CyRedis/hiredis/libhiredis.dylib"]

# Async Redis client - now pure Python (no longer a Cython extension)
# [[tool.setuptools.ext-modules]]
# name = "cy_redis.core.async_core"
# sources = ["cy_redis/core/async_core.py"]
# include-dirs = ["/Users/bengamble/CyRedis/hiredis"]
# extra-objects = ["/Users/bengamble/CyRedis/hiredis/libhiredis.dylib"]

# Temporarily disabled - has Cython issues
# [[tool.setuptools.ext-modules]]
# name = "cy_redis.core.redis_core"
# sources = ["cy_redis/core/redis_core.pyx"]
# include-dirs = ["/Users/bengamble/CyRedis/hiredis"]
# extra-objects = ["/Users/bengamble/CyRedis/hiredis/libhiredis.dylib"]

# Communication - temporarily disabled due to dependency on async_core
# [[tool.setuptools.ext-modules]]
# name = "cy_redis.communication.messaging"
# sources = ["cy_redis/communication/messaging.pyx"]
# include-dirs = ["/Users/bengamble/CyRedis/hiredis"]
# extra-objects = ["/Users/bengamble/CyRedis/hiredis/libhiredis.dylib"]

# [[tool.setuptools.ext-modules]]
# name = "cy_redis.communication.messaging_core"
# sources = ["cy_redis/communication/messaging_core.pyx"]
# include-dirs = ["/Users/bengamble/CyRedis/hiredis"]
# extra-objects = ["/Users/bengamble/CyRedis/hiredis/libhiredis.dylib"]

# [[tool.setuptools.ext-modules]]
# name = "cy_redis.communication.rpc"
# sources = ["cy_redis/communication/rpc.pyx"]
# include-dirs = ["/Users/bengamble/CyRedis/hiredis"]
# extra-objects = ["/Users/bengamble/CyRedis/hiredis/libhiredis.dylib"]

# Advanced Features
[[tool.setuptools.ext-modules]]
name = "cy_redis.features.advanced"
sources = ["cy_redis/features/advanced.pyx"]
include-dirs = ["/Users/bengamble/CyRedis/hiredis"]
extra-objects = ["/Users/bengamble/CyRedis/hiredis/libhiredis.dylib"]
extra-link-args = ["-lz"]

[[tool.setuptools.ext-modules]]
name = "cy_redis.features.distributed"
sources = ["cy_redis/features/distributed.pyx"]
include-dirs = ["/Users/bengamble/CyRedis/hiredis"]
extra-objects = ["/Users/bengamble/CyRedis/hiredis/libhiredis.dylib"]

# Temporarily disabled - has Cython issues
# [[tool.setuptools.ext-modules]]
# name = "cy_redis.features.functions"
# sources = ["cy_redis/features/functions.pyx"]
# include-dirs = ["/Users/bengamble/CyRedis/hiredis"]
# extra-objects = ["/Users/bengamble/CyRedis/hiredis/libhiredis.dylib"]

# Temporarily disabled - has Cython issues
# [[tool.setuptools.ext-modules]]
# name = "cy_redis.features.script_manager"
# sources = ["cy_redis/features/script_manager.pyx"]
# include-dirs = ["/Users/bengamble/CyRedis/hiredis"]
# extra-objects = ["/Users/bengamble/CyRedis/hiredis/libhiredis.dylib"]

# Web Integration - temporarily disabled due to Cython issues
# [[tool.setuptools.ext-modules]]
# name = "cy_redis.web.web_cache"
# sources = ["cy_redis/web/web_cache.pyx"]
# include-dirs = ["/Users/bengamble/CyRedis/hiredis"]
# extra-objects = ["/Users/bengamble/CyRedis/hiredis/libhiredis.dylib"]

# [[tool.setuptools.ext-modules]]
# name = "cy_redis.web.web_app_support"
# sources = ["cy_redis/web/web_app_support.pyx"]
# include-dirs = ["/Users/bengamble/CyRedis/hiredis"]
# extra-objects = ["/Users/bengamble/CyRedis/hiredis/libhiredis.dylib"]

# Auth components - temporarily disabled due to Cython issues
# [[tool.setuptools.ext-modules]]
# name = "cy_redis.auth.token_manager"
# sources = ["cy_redis/auth/token_manager.pyx"]
# include-dirs = ["/Users/bengamble/CyRedis/hiredis"]
# extra-objects = ["/Users/bengamble/CyRedis/hiredis/libhiredis.dylib"]

# [[tool.setuptools.ext-modules]]
# name = "cy_redis.auth.session_manager"
# sources = ["cy_redis/auth/session_manager.pyx"]
# include-dirs = ["/Users/bengamble/CyRedis/hiredis"]
# extra-objects = ["/Users/bengamble/CyRedis/hiredis/libhiredis.dylib"]

# [[tool.setuptools.ext-modules]]
# name = "cy_redis.auth.two_factor_auth"
# sources = ["cy_redis/auth/two_factor_auth.pyx"]
# include-dirs = ["/Users/bengamble/CyRedis/hiredis"]
# extra-objects = ["/Users/bengamble/CyRedis/hiredis/libhiredis.dylib"]

# [[tool.setuptools.ext-modules]]
# name = "cy_redis.auth.password_reset_manager"
# sources = ["cy_redis/auth/password_reset_manager.pyx"]
# include-dirs = ["/Users/bengamble/CyRedis/hiredis"]
# extra-objects = ["/Users/bengamble/CyRedis/hiredis/libhiredis.dylib"]

# Worker components - temporarily disabled due to Cython issues
# [[tool.setuptools.ext-modules]]
# name = "cy_redis.workers.worker_queue"
# sources = ["cy_redis/workers/worker_queue.pyx"]
# include-dirs = ["/Users/bengamble/CyRedis/hiredis"]
# extra-objects = ["/Users/bengamble/CyRedis/hiredis/libhiredis.dylib"]

# [[tool.setuptools.ext-modules]]
# name = "cy_redis.workers.lifecycle_manager"
# sources = ["cy_redis/workers/lifecycle_manager.pyx"]
# include-dirs = ["/Users/bengamble/CyRedis/hiredis"]
# extra-objects = ["/Users/bengamble/CyRedis/hiredis/libhiredis.dylib"]

# [[tool.setuptools.ext-modules]]
# name = "cy_redis.workers.worker_coordinator"
# sources = ["cy_redis/workers/worker_coordinator.pyx"]
# include-dirs = ["/Users/bengamble/CyRedis/hiredis"]
# extra-objects = ["/Users/bengamble/CyRedis/hiredis/libhiredis.dylib"]

# [[tool.setuptools.ext-modules]]
# name = "cy_redis.workers.multi_session_tracker"
# sources = ["cy_redis/workers/multi_session_tracker.pyx"]
# include-dirs = ["/Users/bengamble/CyRedis/hiredis"]
# extra-objects = ["/Users/bengamble/CyRedis/hiredis/libhiredis.dylib"]

# Data Structures - temporarily disabled due to Cython issues
# [[tool.setuptools.ext-modules]]
# name = "cy_redis.data.shared_dict"
# sources = ["cy_redis/data/shared_dict.pyx"]
# include-dirs = ["/Users/bengamble/CyRedis/hiredis"]
# extra-objects = ["/Users/bengamble/CyRedis/hiredis/libhiredis.dylib"]
# extra-link-args = ["-lz"]

# [[tool.setuptools.ext-modules]]
# name = "cy_redis.data.shared_state_manager"
# sources = ["cy_redis/data/shared_state_manager.pyx"]
# include-dirs = ["/Users/bengamble/CyRedis/hiredis"]
# extra-objects = ["/Users/bengamble/CyRedis/hiredis/libhiredis.dylib"]

# [[tool.setuptools.ext-modules]]
# name = "cy_redis.data.concurrent_shared_dict"
# sources = ["cy_redis/data/concurrent_shared_dict.pyx"]
# include-dirs = ["/Users/bengamble/CyRedis/hiredis"]
# extra-objects = ["/Users/bengamble/CyRedis/hiredis/libhiredis.dylib"]
# extra-link-args = ["-lz"]

# Utils - temporarily disabled due to Cython issues
# [[tool.setuptools.ext-modules]]
# name = "cy_redis.utils.redis_iterators"
# sources = ["cy_redis/utils/redis_iterators.pyx"]
# include-dirs = ["/Users/bengamble/CyRedis/hiredis"]
# extra-objects = ["/Users/bengamble/CyRedis/hiredis/libhiredis.dylib"]

[tool.setuptools.dynamic]
version = {attr = "cy_redis.__version__"}

[tool.cython]
language_level = 3

[tool.black]
line-length = 88
target-version = ['py36']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["cy_redis"]
known_third_party = ["Cython"]

[tool.mypy]
python_version = "3.6"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "Cython.*",
    "setuptools.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=cy_redis --cov-report=html --cov-report=term-missing"
testpaths = [
    "tests",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
