[build-system]
requires = ["setuptools", "Cython>=0.29.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cy-redis"
version = "0.1.0"
description = "High-performance threaded Redis client using Cython and hiredis"
readme = "README_CYREDIS.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    {name = "Ben Gamble", email = "ben@example.com"},
]
maintainers = [
    {name = "Ben Gamble", email = "ben@example.com"},
]
keywords = [
    "redis",
    "cython",
    "hiredis",
    "high-performance",
    "threading",
    "async",
    "database",
    "client",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Cython",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking",
]
dependencies = [
    "Cython>=0.29.0",
    "pytest-asyncio>=1.2.0",
    "pytest-timeout>=2.4.0",
    "redis>=7.0.1",
]

[project.optional-dependencies]
async = [
    "uvloop>=0.17.0",
]
ai = [
    "numpy>=1.19.0",
]
dev = [
    "pytest>=6.0",
    "pytest-asyncio>=0.15",
    "black>=21.0",
    "flake8>=3.9",
    "mypy>=0.900",
    "isort>=5.8.0",
]
docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0",
    "myst-parser>=0.15",
]
test = [
    "pytest>=6.0",
    "pytest-asyncio>=0.15",
    "pytest-cov>=2.10",
]

[project.urls]
Homepage = "https://github.com/your-repo/cy-redis"
Documentation = "https://cy-redis.readthedocs.io/"
Repository = "https://github.com/your-repo/cy-redis"
Issues = "https://github.com/your-repo/cy-redis/issues"
Changelog = "https://github.com/your-repo/cy-redis/blob/main/CHANGELOG.md"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["cy_redis*", "cyredis_game*"]
exclude = ["tests*", "docs*", "scripts*", "plugins*", "examples*", "lua_scripts*", "hiredis*"]

# Core Infrastructure (minimal buildable set)
[[tool.setuptools.ext-modules]]
name = "cy_redis.core.cy_redis_client"
sources = ["cy_redis/core/cy_redis_client.pyx"]
include-dirs = [".", "hiredis"]
extra-objects = ["hiredis/libhiredis.a"]

[[tool.setuptools.ext-modules]]
name = "cy_redis.core.protocol"
sources = ["cy_redis/core/protocol.pyx"]
include-dirs = [".", "hiredis"]
extra-objects = ["hiredis/libhiredis.a"]

# Advanced Features (keep stable ones)
[[tool.setuptools.ext-modules]]
name = "cy_redis.features.advanced"
sources = ["cy_redis/features/advanced.pyx"]
include-dirs = [".", "hiredis"]
extra-objects = ["hiredis/libhiredis.a"]
libraries = ["z"]

# Distributed primitives
[[tool.setuptools.ext-modules]]
name = "cy_redis.features.distributed"
sources = ["cy_redis/features/distributed.pyx"]
include-dirs = [".", "hiredis"]
extra-objects = ["hiredis/libhiredis.a"]

# Web Integration
[[tool.setuptools.ext-modules]]
name = "cy_redis.web.web_cache"
sources = ["cy_redis/web/web_cache.pyx"]
include-dirs = [".", "hiredis"]
extra-objects = ["hiredis/libhiredis.a"]

# Auth components (build before workers/web support)
[[tool.setuptools.ext-modules]]
name = "cy_redis.auth.token_manager"
sources = ["cy_redis/auth/token_manager.pyx"]
include-dirs = [".", "hiredis"]
extra-objects = ["hiredis/libhiredis.a"]

[[tool.setuptools.ext-modules]]
name = "cy_redis.auth.session_manager"
sources = ["cy_redis/auth/session_manager.pyx"]
include-dirs = [".", "hiredis"]
extra-objects = ["hiredis/libhiredis.a"]

[[tool.setuptools.ext-modules]]
name = "cy_redis.auth.two_factor_auth"
sources = ["cy_redis/auth/two_factor_auth.pyx"]
include-dirs = [".", "hiredis"]
extra-objects = ["hiredis/libhiredis.a"]

[[tool.setuptools.ext-modules]]
name = "cy_redis.auth.password_reset_manager"
sources = ["cy_redis/auth/password_reset_manager.pyx"]
include-dirs = [".", "hiredis"]
extra-objects = ["hiredis/libhiredis.a"]

# Worker components
[[tool.setuptools.ext-modules]]
name = "cy_redis.workers.worker_queue"
sources = ["cy_redis/workers/worker_queue.pyx"]
include-dirs = [".", "hiredis"]
extra-objects = ["hiredis/libhiredis.a"]

[[tool.setuptools.ext-modules]]
name = "cy_redis.workers.lifecycle_manager"
sources = ["cy_redis/workers/lifecycle_manager.pyx"]
include-dirs = [".", "hiredis"]
extra-objects = ["hiredis/libhiredis.a"]

[[tool.setuptools.ext-modules]]
name = "cy_redis.workers.worker_coordinator"
sources = ["cy_redis/workers/worker_coordinator.pyx"]
include-dirs = [".", "hiredis"]
extra-objects = ["hiredis/libhiredis.a"]

[[tool.setuptools.ext-modules]]
name = "cy_redis.workers.multi_session_tracker"
sources = ["cy_redis/workers/multi_session_tracker.pyx"]
include-dirs = [".", "hiredis"]
extra-objects = ["hiredis/libhiredis.a"]

# Data / utils needed by web_app_support
[[tool.setuptools.ext-modules]]
name = "cy_redis.data.shared_state_manager"
sources = ["cy_redis/data/shared_state_manager.pyx"]
include-dirs = [".", "hiredis"]
extra-objects = ["hiredis/libhiredis.a"]

[[tool.setuptools.ext-modules]]
name = "cy_redis.utils.redis_iterators"
sources = ["cy_redis/utils/redis_iterators.pyx"]
include-dirs = [".", "hiredis"]
extra-objects = ["hiredis/libhiredis.a"]

# Web app support (after dependencies)
[[tool.setuptools.ext-modules]]
name = "cy_redis.web.web_app_support"
sources = ["cy_redis/web/web_app_support.pyx"]
include-dirs = [".", "hiredis"]
extra-objects = ["hiredis/libhiredis.a"]
# Data Structures
[[tool.setuptools.ext-modules]]
name = "cy_redis.data.shared_dict"
sources = ["cy_redis/data/shared_dict.pyx"]
include-dirs = [".", "hiredis"]
extra-objects = ["hiredis/libhiredis.a"]
libraries = ["z"]

[[tool.setuptools.ext-modules]]
name = "cy_redis.data.concurrent_shared_dict"
sources = ["cy_redis/data/concurrent_shared_dict.pyx"]
include-dirs = [".", "hiredis"]
extra-objects = ["hiredis/libhiredis.a"]
libraries = ["z"]

# Async core client (uses cy_redis_client)
[[tool.setuptools.ext-modules]]
name = "cy_redis.core.async_core"
sources = ["cy_redis/core/async_core.pyx"]
include-dirs = [".", "hiredis"]
extra-objects = ["hiredis/libhiredis.a"]

# Redis core wrapper (hiredis)
[[tool.setuptools.ext-modules]]
name = "cy_redis.core.redis_core"
sources = ["cy_redis/core/redis_core.pyx"]
include-dirs = [".", "hiredis"]
extra-objects = ["hiredis/libhiredis.a"]

# Messaging primitives (no messaging_core dependency)
[[tool.setuptools.ext-modules]]
name = "cy_redis.communication.messaging"
sources = ["cy_redis/communication/messaging.pyx"]
include-dirs = [".", "hiredis"]
extra-objects = ["hiredis/libhiredis.a"]

# Functions and script manager
[[tool.setuptools.ext-modules]]
name = "cy_redis.features.functions"
sources = ["cy_redis/features/functions.pyx"]
include-dirs = [".", "hiredis"]
extra-objects = ["hiredis/libhiredis.a"]

[[tool.setuptools.ext-modules]]
name = "cy_redis.features.script_manager"
sources = ["cy_redis/features/script_manager.pyx"]
include-dirs = [".", "hiredis"]
extra-objects = ["hiredis/libhiredis.a"]

[[tool.setuptools.ext-modules]]
name = "cy_redis.features.probabilistic"
sources = ["cy_redis/features/probabilistic.pyx"]
include-dirs = [".", "hiredis", "cy_redis/cpp"]
extra-objects = ["hiredis/libhiredis.a"]
language = "c++"

[tool.setuptools.dynamic]
version = {attr = "cy_redis.__version__"}

[[tool.setuptools.ext-modules]]
name = "cyredis_game.game_engine"
sources = ["cyredis_game/game_engine.pyx"]
include-dirs = [".", "hiredis"]
extra-objects = ["hiredis/libhiredis.a"]

[[tool.setuptools.ext-modules]]
name = "cyredis_game.module_manager"
sources = ["cyredis_game/module_manager.pyx"]
include-dirs = [".", "hiredis"]
extra-objects = ["hiredis/libhiredis.a"]

[[tool.setuptools.ext-modules]]
name = "cyredis_game.pathfinding"
sources = ["cyredis_game/pathfinding.pyx"]
include-dirs = [".", "hiredis"]
extra-objects = ["hiredis/libhiredis.a"]

[[tool.setuptools.ext-modules]]
name = "cyredis_game.physics"
sources = ["cyredis_game/physics.pyx"]
include-dirs = [".", "hiredis"]
extra-objects = ["hiredis/libhiredis.a"]

[[tool.setuptools.ext-modules]]
name = "cyredis_game.goap"
sources = ["cyredis_game/goap.pyx"]
include-dirs = [".", "hiredis"]
extra-objects = ["hiredis/libhiredis.a"]

[[tool.setuptools.ext-modules]]
name = "cyredis_game.chain"
sources = ["cyredis_game/chain.pyx"]
include-dirs = [".", "hiredis"]
extra-objects = ["hiredis/libhiredis.a"]

[tool.cython]
language_level = 3

[tool.black]
line-length = 88
target-version = ['py36']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["cy_redis"]
known_third_party = ["Cython"]

[tool.mypy]
python_version = "3.6"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "Cython.*",
    "setuptools.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=cy_redis --cov-report=html --cov-report=term-missing"
testpaths = [
    "tests",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[tool.uv]
package = true

[tool.uv.sources]
# Vendored libraries are built locally — never resolved from PyPI
# arrow, tonbo, rocksdb come from the vendored copies in this repo
