[build-system]
# setuptools >= 77 is required for the PEP 639 `license = "MIT"` string form.
requires = ["setuptools>=77", "Cython>=3.0,<4", "numpy>=1.21"]
build-backend = "setuptools.build_meta"

[project]
name = "cy-redis"
dynamic = ["version"]
description = "High-performance Redis client built with Cython and hiredis"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    {name = "Ben Gamble", email = "ben.gamble@ververica.com"},
]
maintainers = [
    {name = "Ben Gamble", email = "ben.gamble@ververica.com"},
]
keywords = [
    "redis",
    "cython",
    "hiredis",
    "high-performance",
    "threading",
    "async",
    "database",
    "client",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Cython",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking",
]
# No runtime Python dependencies — all Redis communication goes through
# the vendored hiredis C library baked into the Cython extensions.
dependencies = []

[project.optional-dependencies]
# Modular layers — the core client has no runtime dependencies; each optional
# layer pulls only what it needs. `pip install cy-redis[web]`, etc.
async = [
    "uvloop>=0.17.0",
]
ai = [
    "numpy>=1.21.0",
]
auth = [
    "PyJWT>=2.0",
    "pyotp>=2.6",
]
web = [
    "fastapi>=0.100",
    "PyJWT>=2.0",
    "pyotp>=2.6",
]
game = [
    "msgpack>=1.0",
]
# pgcache is a server-side Redis module (loaded with MODULE LOAD); it needs no
# Python runtime dependency. The extra exists so intent can be declared.
pgcache = []
all = [
    "uvloop>=0.17.0",
    "numpy>=1.21.0",
    "PyJWT>=2.0",
    "pyotp>=2.6",
    "fastapi>=0.100",
    "msgpack>=1.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "pytest-timeout>=2.1",
    "black>=23.0",
    "flake8>=6.0",
    "isort>=5.12",
    "mypy>=1.0",
]
test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "pytest-timeout>=2.1",
    "redis>=5.0",
]

[project.urls]
Homepage = "https://github.com/Ugbot/CyRedis"
Repository = "https://github.com/Ugbot/CyRedis"
Issues = "https://github.com/Ugbot/CyRedis/issues"
Changelog = "https://github.com/Ugbot/CyRedis/blob/main/CHANGELOG.md"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "cy_redis.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["cy_redis*", "cyredis_game*"]
exclude = ["tests*", "docs*", "scripts*", "plugins*", "examples*", "hiredis*"]

# ── cy_redis core ──────────────────────────────────────────────────────────────

[[tool.setuptools.ext-modules]]
name = "cy_redis.core.cy_redis_client"
sources = ["cy_redis/core/cy_redis_client.pyx"]
include-dirs = [".", "hiredis"]
extra-objects = ["hiredis/libhiredis.a"]

[[tool.setuptools.ext-modules]]
name = "cy_redis.core.redis_core"
sources = ["cy_redis/core/redis_core.pyx"]
include-dirs = [".", "hiredis"]
extra-objects = ["hiredis/libhiredis.a"]

[[tool.setuptools.ext-modules]]
name = "cy_redis.core.protocol"
sources = ["cy_redis/core/protocol.pyx"]
include-dirs = [".", "hiredis"]
extra-objects = ["hiredis/libhiredis.a"]

[[tool.setuptools.ext-modules]]
name = "cy_redis.core.async_core"
sources = ["cy_redis/core/async_core.pyx"]
include-dirs = [".", "hiredis"]
extra-objects = ["hiredis/libhiredis.a"]

# TLS support: links hiredis_ssl + OpenSSL. setup.py drops this extension when
# OpenSSL development headers are missing at build time (plain-TCP installs
# still work); it also injects the OpenSSL include/lib dirs on macOS.
[[tool.setuptools.ext-modules]]
name = "cy_redis.core.tls_support"
sources = ["cy_redis/core/tls_support.pyx"]
include-dirs = [".", "hiredis"]
extra-objects = ["hiredis/libhiredis_ssl.a", "hiredis/libhiredis.a"]
libraries = ["ssl", "crypto"]

# ── cy_redis features ──────────────────────────────────────────────────────────

[[tool.setuptools.ext-modules]]
name = "cy_redis.features.advanced"
sources = ["cy_redis/features/advanced.pyx"]
include-dirs = [".", "hiredis"]
extra-objects = ["hiredis/libhiredis.a"]
libraries = ["z"]

[[tool.setuptools.ext-modules]]
name = "cy_redis.features.distributed"
sources = ["cy_redis/features/distributed.pyx"]
include-dirs = [".", "hiredis"]
extra-objects = ["hiredis/libhiredis.a"]

[[tool.setuptools.ext-modules]]
name = "cy_redis.features.functions"
sources = ["cy_redis/features/functions.pyx"]
include-dirs = [".", "hiredis"]
extra-objects = ["hiredis/libhiredis.a"]

[[tool.setuptools.ext-modules]]
name = "cy_redis.features.script_manager"
sources = ["cy_redis/features/script_manager.pyx"]
include-dirs = [".", "hiredis"]
extra-objects = ["hiredis/libhiredis.a"]

[[tool.setuptools.ext-modules]]
name = "cy_redis.features.probabilistic"
sources = ["cy_redis/features/probabilistic.pyx"]
include-dirs = [".", "hiredis", "cy_redis/cpp"]
extra-objects = ["hiredis/libhiredis.a"]
language = "c++"

[[tool.setuptools.ext-modules]]
name = "cy_redis.features.json_ops"
sources = ["cy_redis/features/json_ops.pyx"]
include-dirs = [".", "hiredis"]
extra-objects = ["hiredis/libhiredis.a"]

[[tool.setuptools.ext-modules]]
name = "cy_redis.features.search"
sources = ["cy_redis/features/search.pyx"]
include-dirs = [".", "hiredis"]
extra-objects = ["hiredis/libhiredis.a"]

[[tool.setuptools.ext-modules]]
name = "cy_redis.features.graph"
sources = ["cy_redis/features/graph.pyx"]
include-dirs = [".", "hiredis"]
extra-objects = ["hiredis/libhiredis.a"]

[[tool.setuptools.ext-modules]]
name = "cy_redis.features.ai"
sources = ["cy_redis/features/ai.pyx"]
include-dirs = [".", "hiredis"]
extra-objects = ["hiredis/libhiredis.a"]
language = "c++"
# numpy include dir injected at build time by setup.py cmdclass

# ── cy_redis auth ──────────────────────────────────────────────────────────────

[[tool.setuptools.ext-modules]]
name = "cy_redis.auth.token_manager"
sources = ["cy_redis/auth/token_manager.pyx"]
include-dirs = [".", "hiredis"]
extra-objects = ["hiredis/libhiredis.a"]

[[tool.setuptools.ext-modules]]
name = "cy_redis.auth.session_manager"
sources = ["cy_redis/auth/session_manager.pyx"]
include-dirs = [".", "hiredis"]
extra-objects = ["hiredis/libhiredis.a"]

[[tool.setuptools.ext-modules]]
name = "cy_redis.auth.two_factor_auth"
sources = ["cy_redis/auth/two_factor_auth.pyx"]
include-dirs = [".", "hiredis"]
extra-objects = ["hiredis/libhiredis.a"]

[[tool.setuptools.ext-modules]]
name = "cy_redis.auth.password_reset_manager"
sources = ["cy_redis/auth/password_reset_manager.pyx"]
include-dirs = [".", "hiredis"]
extra-objects = ["hiredis/libhiredis.a"]

# ── cy_redis workers ───────────────────────────────────────────────────────────

[[tool.setuptools.ext-modules]]
name = "cy_redis.workers.worker_queue"
sources = ["cy_redis/workers/worker_queue.pyx"]
include-dirs = [".", "hiredis"]
extra-objects = ["hiredis/libhiredis.a"]

[[tool.setuptools.ext-modules]]
name = "cy_redis.workers.lifecycle_manager"
sources = ["cy_redis/workers/lifecycle_manager.pyx"]
include-dirs = [".", "hiredis"]
extra-objects = ["hiredis/libhiredis.a"]

[[tool.setuptools.ext-modules]]
name = "cy_redis.workers.worker_coordinator"
sources = ["cy_redis/workers/worker_coordinator.pyx"]
include-dirs = [".", "hiredis"]
extra-objects = ["hiredis/libhiredis.a"]

[[tool.setuptools.ext-modules]]
name = "cy_redis.workers.multi_session_tracker"
sources = ["cy_redis/workers/multi_session_tracker.pyx"]
include-dirs = [".", "hiredis"]
extra-objects = ["hiredis/libhiredis.a"]

# ── cy_redis data ──────────────────────────────────────────────────────────────

[[tool.setuptools.ext-modules]]
name = "cy_redis.data.shared_dict"
sources = ["cy_redis/data/shared_dict.pyx"]
include-dirs = [".", "hiredis"]
extra-objects = ["hiredis/libhiredis.a"]
libraries = ["z"]

[[tool.setuptools.ext-modules]]
name = "cy_redis.data.concurrent_shared_dict"
sources = ["cy_redis/data/concurrent_shared_dict.pyx"]
include-dirs = [".", "hiredis"]
extra-objects = ["hiredis/libhiredis.a"]
libraries = ["z"]

[[tool.setuptools.ext-modules]]
name = "cy_redis.data.shared_state_manager"
sources = ["cy_redis/data/shared_state_manager.pyx"]
include-dirs = [".", "hiredis"]
extra-objects = ["hiredis/libhiredis.a"]

# ── cy_redis web ───────────────────────────────────────────────────────────────

[[tool.setuptools.ext-modules]]
name = "cy_redis.web.web_cache"
sources = ["cy_redis/web/web_cache.pyx"]
include-dirs = [".", "hiredis"]
extra-objects = ["hiredis/libhiredis.a"]

[[tool.setuptools.ext-modules]]
name = "cy_redis.web.web_app_support"
sources = ["cy_redis/web/web_app_support.pyx"]
include-dirs = [".", "hiredis"]
extra-objects = ["hiredis/libhiredis.a"]

[[tool.setuptools.ext-modules]]
name = "cy_redis.web.channels"
sources = ["cy_redis/web/channels.pyx"]
include-dirs = [".", "hiredis"]
extra-objects = ["hiredis/libhiredis.a"]

# ── cy_redis utils / communication ────────────────────────────────────────────

[[tool.setuptools.ext-modules]]
name = "cy_redis.utils.redis_iterators"
sources = ["cy_redis/utils/redis_iterators.pyx"]
include-dirs = [".", "hiredis"]
extra-objects = ["hiredis/libhiredis.a"]

[[tool.setuptools.ext-modules]]
name = "cy_redis.communication.messaging"
sources = ["cy_redis/communication/messaging.pyx"]
include-dirs = [".", "hiredis"]
extra-objects = ["hiredis/libhiredis.a"]

[[tool.setuptools.ext-modules]]
name = "cy_redis.communication.rpc"
sources = ["cy_redis/communication/rpc.pyx"]
include-dirs = [".", "hiredis"]
extra-objects = ["hiredis/libhiredis.a"]

# ── cyredis_game ───────────────────────────────────────────────────────────────

[[tool.setuptools.ext-modules]]
name = "cyredis_game.game_engine"
sources = ["cyredis_game/game_engine.pyx"]
include-dirs = [".", "hiredis"]
extra-objects = ["hiredis/libhiredis.a"]

[[tool.setuptools.ext-modules]]
name = "cyredis_game.module_manager"
sources = ["cyredis_game/module_manager.pyx"]
include-dirs = [".", "hiredis"]
extra-objects = ["hiredis/libhiredis.a"]

[[tool.setuptools.ext-modules]]
name = "cyredis_game.pathfinding"
sources = ["cyredis_game/pathfinding.pyx"]
include-dirs = [".", "hiredis"]
extra-objects = ["hiredis/libhiredis.a"]

[[tool.setuptools.ext-modules]]
name = "cyredis_game.physics"
sources = ["cyredis_game/physics.pyx"]
include-dirs = [".", "hiredis"]
extra-objects = ["hiredis/libhiredis.a"]

[[tool.setuptools.ext-modules]]
name = "cyredis_game.goap"
sources = ["cyredis_game/goap.pyx"]
include-dirs = [".", "hiredis"]
extra-objects = ["hiredis/libhiredis.a"]

[[tool.setuptools.ext-modules]]
name = "cyredis_game.chain"
sources = ["cyredis_game/chain.pyx"]
include-dirs = [".", "hiredis"]
extra-objects = ["hiredis/libhiredis.a"]

# ── Tool configuration ─────────────────────────────────────────────────────────

[tool.cython]
language_level = 3

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]
extend-exclude = '''
/(\.eggs|\.git|\.venv|build|dist)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["cy_redis", "cyredis_game"]
known_third_party = ["Cython"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["Cython.*", "setuptools.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra --strict-markers --strict-config --tb=short"
testpaths = ["tests"]
asyncio_mode = "auto"
timeout = 300
timeout_method = "thread"
markers = [
    "unit: Unit tests that don't require external services",
    "integration: Integration tests requiring external services",
    "slow: Tests that take significant time to complete",
    "cluster: Tests requiring Redis cluster setup",
    "sentinel: Tests requiring Redis sentinel setup",
    "async_test: Asynchronous tests",
    "benchmark: Performance/benchmark tests",
    "docker: Tests that require Docker to be running",
    "pgcache: Tests for PostgreSQL cache module",
    "messaging: Tests for messaging functionality",
    "rpc: Tests for RPC functionality",
    "distributed: Tests for distributed features",
    "worker_coordination: Tests for worker coordination and recovery features",
    "requires_redis: Tests that require Redis to be running",
    "game_module: Tests requiring cy_game Redis module on port 6380",
    "requires_postgres: Tests that require PostgreSQL to be running",
    "skip_ci: Tests to skip in CI environment",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[tool.uv]
package = true

[tool.uv.sources]
# Vendored libraries are built locally — never resolved from PyPI

# ── cibuildwheel: binary wheels for PyPI ────────────────────────────────────────
[tool.cibuildwheel]
# CPython 3.9–3.14; no PyPy (the extensions use CPython C-API + numpy), no 32-bit.
build = "cp39-* cp310-* cp311-* cp312-* cp313-* cp314-*"
skip = "*_i686 *-win32 pp*"
# setup.py builds the vendored hiredis static lib during build_ext, so no extra
# before-build step is needed. Import the compiled extension modules directly —
# cy_redis/__init__.py swallows ImportError, so `from cy_redis import
# CyRedisClient` would pass even on a wheel whose extensions are broken. Every
# published wheel must ship working TLS, so the check also creates a real TLS
# context via tls_support.
test-command = "python -c \"import cy_redis.core.cy_redis_client; import cy_redis; assert cy_redis.CyRedisClient is not None; import cy_redis.core.tls_support as t; t.create_ssl_context(); print('cy-redis', cy_redis.__version__, 'with TLS')\""

[tool.cibuildwheel.linux]
# OpenSSL headers for hiredis_ssl/tls_support: dnf on manylinux (AlmaLinux),
# apk on musllinux (Alpine).
before-all = "yum install -y openssl-devel || apk add --no-cache openssl-dev"

[tool.cibuildwheel.macos]
# Match the deployment target the vendored hiredis static lib is built against,
# so the wheel platform tag isn't artificially narrowed. GitHub macOS runners
# ship Homebrew OpenSSL; hiredis's Makefile and setup.py both search the
# Homebrew locations.
environment = { MACOSX_DEPLOYMENT_TARGET = "11.0" }
before-all = "brew list openssl@3 >/dev/null 2>&1 || brew install openssl@3"
